
- The project-wide Alert system has been removed (to be re-implemented in the future).
- Access groups have been permanently removed.
- Added 'access_token' to data blacklist.
- The legacy (unused) search tables have been removed.

Version 7.5.4
-------------

- Yet another case where valid team membership was being excluded.

Version 7.5.3
-------------

- Fix another case where valid team membership was being excluded

Version 7.5.2
-------------

- Correctly support SENTRY_PROJECT.

Version 7.5.1
-------------

- Fix case where certain pages were not correctly including valid team membership
- Fix default user creation (regain automated signal)
- Fix sampling of internal metrics

Version 7.5.0
-------------

This release removes the ability to login or create accounts using a social auth backend.

If your install was based purely on social accounts you'll need to use the standard reset password flows to recover accounts.

Redis must be at least version 2.6.12.

- Interface.compute_hashes() now receives the platform of the event.
- Server-side data scrubbers were incorrectly filtering invalid interface aliases.
- The sensitive_fields option is now exposed in project settings.
- The default logger name is now an empty value.
- Celery has been upgraded to 3.1 and is now available at 'sentry.celery'.
- Facebook, Google, and Twitter identities are no longer available.
- Plugin's inheriting from TagPlugin are now based on v2 of the API.
- Metrics (counters) are now collected both in sentry.tsdb and an optionally configured statsd
  instance.
- Organizations can now toggle open membership which allows members to freely join/leave any team.
- ProjectKey.user has been removed.
- Organization API keys are now exposed in the UI.
- Team.owner has been removed.
- TeamMember has been removed.
- PendingTeamMember has been removed.
- Added OrganizationMember.counter.
- Added 'sentry.db.postgres' optimized Postgres backend.