@@ -26,7 +26,11 @@ class Command(BaseCommand):
         make_option('--noupgrade',
             action='store_false',
             dest='upgrade',
-            default=True),
+            default=False),
+        make_option('--upgrade',
+            action='store_true',
+            dest='upgrade',
+            default=False),
         make_option('--workers', '-w',
             dest='workers',
             type=int,
